[tool.poetry]
name = "pylex"
version = "0.1.0"
description = "Small CLI tool for lexical analysis of python code."
authors = ["Aleksei Panfilov"]

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.7.2"
nltk = "^3.4"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pylex = "pylex.cli:main"
